Refactors code smells sonar